--- a/sourceCodeStudy/pom.xml
+++ b/sourceCodeStudy/pom.xml
@@ -22,7 +22,7 @@
 
     <properties>
         <!-- 版本可以自己选择 -->
-        <spring.version>5.2.15.RELEASE</spring.version>
+        <spring.version>5.3.6</spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -94,6 +94,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.6</version>
         </dependency>
     </dependencies>
 
